--- a/index.html
+++ b/index.html
@@ -404,7 +404,7 @@
                     <a href="#"> <i class="fas fa-user"></i> by user </a>
                     <a href="#"> <i class="fas fa-calendar"></i> 1st may, 2021 </a>
                 </div>
-                <h3>sayuran dan buah-buahan segar dan organik</h3>
+                <h3>Sayuran dan buah-buahan segar dan organik</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam, expedita.</p>
                 <a href="#" class="btn">read more</a>
             </div>
@@ -417,7 +417,7 @@
                     <a href="#"> <i class="fas fa-user"></i> by user </a>
                     <a href="#"> <i class="fas fa-calendar"></i> 1st may, 2021 </a>
                 </div>
-                <h3>sayuran dan buah-buahan segar dan organik</h3>
+                <h3>Sayuran dan buah-buahan segar dan organik</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam, expedita.</p>
                 <a href="#" class="btn">read more</a>
             </div>
@@ -430,7 +430,7 @@
                     <a href="#"> <i class="fas fa-user"></i> by user </a>
                     <a href="#"> <i class="fas fa-calendar"></i> 1st may, 2021 </a>
                 </div>
-                <h3>sayuran dan buah-buahan segar dan organik</h3>
+                <h3>Sayuran dan buah-buahan segar dan organik</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam, expedita.</p>
                 <a href="#" class="btn">read more</a>
             </div>
