--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 <header class="header">
 
-    <a href="#" class="logo"> <i class="fas fa-shopping-basket"></i> B30 </a>
+    <a href="#" class="logo"> <i class="fas fa-shopping-basket"></i> Pasar Lokal </a>
 
     <nav class="navbar">
         <a href="#home">Home</a>
